--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.9.0",
     "mobx": "^6.13.7",
     "mobx-react-lite": "^4.1.0",
+    "moment": "^2.30.1",
     "nth-check": "^2.1.1",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
